--- a/bot.conf
+++ b/bot.conf
@@ -1,10 +1,10 @@
-[program:telegrambot]
-directory=/home/ubuntu/telegrambot
+[program:editorbot]
+directory=/home/ubuntu/editorbot
 command=python3 app.py
 
 autostart=true
 autorestart=true
 environment=HOME="/home/ubuntu",USER="ubuntu"
 
-stderr_logfile=/home/ubuntu/telegrambot/logfile_err.log
-stdout_logfile=/home/ubuntu/telegrambot/logfile.log
+stderr_logfile=/home/ubuntu/editorbot/logfile_err.log
+stdout_logfile=/home/ubuntu/editorbot/logfile.log
