added variable email

--- a/.env.dist
+++ b/.env.dist
@@ -4,3 +4,7 @@
 ADMINS=12345678,12345677,12345676
 BOT_TOKEN=123452345243:Asdfasdfasf
 ip=localhost
+
+email=example@gmail.com
+
+ADVEGO_TOKEN=asf121f16e2-12f12f12f412f12f12f12e04b1c
