--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,13 @@ ip=localhost
 email=example@gmail.com
 
 ADVEGO_TOKEN=asf121f16e2-12f12f12f412f12f12f12e04b1c
+
+DB_USER = slavetos
+DB_PASS = 228481595
+DB_HOST = localhost
+DB_NAME = telegram_bot
+
+QIWI_TOKEN=
+WALLET_QIWI=
+QIWI_PUBKEY=
+QIWI_SECRET_KEY=
